@@ -252,6 +252,8 @@ void Preferences::reset() {
 	initial_postprocessing = false;
 	initial_volnorm = false;
 
+	initial_deinterlace = MediaSettings::NoDeinterlace;
+
 	initial_audio_channels = MediaSettings::ChDefault;
 
 	initial_audio_track = 1;
@@ -474,6 +476,8 @@ void Preferences::save() {
 	set->setValue("initial_volnorm", initial_volnorm);
 	set->setValue("initial_postprocessing", initial_postprocessing);
 
+	set->setValue("initial_deinterlace", initial_deinterlace);
+
 	set->setValue("initial_audio_channels", initial_audio_channels);
 
 	set->setValue("initial_audio_track", initial_audio_track);
@@ -693,6 +697,8 @@ void Preferences::load() {
 
 	initial_volnorm = set->value("initial_volnorm", initial_volnorm).toBool();
 	initial_postprocessing = set->value("initial_postprocessing", initial_postprocessing).toBool();
+
+	initial_deinterlace = set->value("initial_deinterlace", initial_deinterlace).toInt();
 
 	initial_audio_channels = set->value("initial_audio_channels", initial_audio_channels).toInt();
 
